syntax = "proto3";

package checkUserIdPackage;


service checkUserIdService {
    rpc checkUserId (checkUserIdRequest) returns (checkUserIdResponse);
};


message checkUserIdRequest {
    string email = 1;
};


message checkUserIdResponse {
    bool available = 1;
};